<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/simple_adapter"
        android:text="@string/simple_adapter_demo"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/custom_dialog"
        android:text="@string/custom_dialog_demo"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/xml_menu"
        android:text="@string/xml_menu_demo"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_context"
        android:text="@string/action_context_demo"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/process_bar"
        android:text="@string/process_bar_demo"
        android:textSize="20dp"
        />

</LinearLayout>